# fish-text

./: .gitignore  README.md  fish-text.cabal  flake.nix
.github/workflows/: build.yml
app/: Main.hs
nix/: package.nix
