cabal-version:      3.0
name:               fish-text
version:            1.0.0
license:            GPL-3.0-only
license-file:       LICENSE
author:             ProggerX
maintainer:         x@proggers.ru
build-type:         Simple

common warnings
    ghc-options: -Wall

executable fish-text
    import:           warnings
    main-is:          Main.hs
    build-depends:    base >=4.18.2.1, telegram-bot-api, servant-client, http-client-tls, dotenv, text, wreq, lens, aeson
    hs-source-dirs:   app
    default-language: GHC2021
